js/src/tests/test262/built-ins/NativeErrors/TypeError/prop-desc.js
verifyNotEnumerable
(
this
"
TypeError
"
)
;
verifyWritable
(
this
"
TypeError
"
)
;
verifyConfigurable
(
this
"
TypeError
"
)
;
reportCompare
(
0
0
)
;
